--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "tailwind": "tailwindcss -i ./app/globals.css -o ./public/tailwind.css --watch"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.31.9",
     "@prisma/client": "^6.15.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
