--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "uuid": "^11.1.0",
+    "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@faker-js/faker": "^10.0.0",
     "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^20",
     "@types/react": "^19",
