--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.85.6",
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
