--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@stripe/react-stripe-js": "^4.0.2",
+    "@stripe/stripe-js": "^7.9.0",
     "@supabase/supabase-js": "^2.57.2",
     "@tanstack/react-query": "^5.85.6",
-    "axios": "^1.11.0",
+    "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
@@ -33,6 +35,7 @@
     "react-icons": "^5.5.0",
     "react-share": "^5.2.2",
     "sonner": "^2.0.7",
+    "stripe": "^18.5.0",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.6",
     "uuid": "^11.1.0",
